# chatterlite

./: .gitignore  README.md  test.py
backend/: .gitignore  alembic.ini  pyproject.toml
backend/docs/: 1_core_architecture.md  2_arch_v1_plan.md  3_implementation_ortder.md  4_development_phase_1.md  5_database_setup.md  6_phase_2_models_schema.md  7_models_relationship.md  8_redis_initialization.md  9_schemas.md  websocketmanager.md
backend/src/: main.py
backend/src/chatterlite/: main.py
backend/src/chatterlite/api/: router.py
backend/src/chatterlite/api/routes/: health.py
backend/src/chatterlite/core/: config.py  database.py  redis_client.py
backend/src/chatterlite/db/migrations/: env.py
backend/src/chatterlite/db/migrations/versions/: 3ed5d7fd1495_create_initial_chat_models.py  d69a80258376_create_initial_chat_models.py
backend/src/chatterlite/models/: __init__.py  base.py  conversation.py  conversation_member.py  enums.py  message.py  notification.py  user.py
backend/src/chatterlite/schemas/: __init__.py  common.py  conversation.py  member.py  message.py  notification.py  user.py
backend/src/core/: database.py  redis_client.py
backend/src/models/: messages.py  user.py
backend/src/websocket/: manager.py
backend/tests/unit/: test_health.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/auth/: AuthShell.tsx  clerkAppearance.ts
frontend/app/dashboard/: page.tsx
frontend/app/sign-in/[[...sign-in]]/: page.tsx
frontend/app/sign-up/[[...sign-up]]/: page.tsx
