[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nish489",email = "nishchup489@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.138.0,<0.139.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)",
    "websockets (>=16.0,<17.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
