[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nish489",email = "nishchup489@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "alembic (>=1.18.5,<2.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "httpx2 (>=2.7.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "redis (>=8.0.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]